--- a/client-app/src/app/app.component.html
+++ b/client-app/src/app/app.component.html
@@ -34,7 +34,7 @@
     <label for="BackLite">Back Lite</label><br>
     <input type="checkbox" name="" id="rollAndTipe">
     <label for="rollAndTipe">Roll & Tipe</label><br>
-    <input type="number" name="" min="0" id="slitter" [(ngModel)]="value" [(value)]="slitter">
+    <input type="number" name="" min="0" id="slitter">
     <label for="slitter">slitter</label><br>
     <hr>
     <button type="submit">OK</button>
